src/plugins/clangtools/executableinfo.cpp
@@ -163,6 +163,23 @@ ClangTidyInfo::ClangTidyInfo(const QString &executablePath)
     , supportedChecks(queryClangTidyChecks(executablePath, "-checks=*"))
 {}
 
+ClazyStandaloneInfo ClazyStandaloneInfo::getInfo(const QString &_executablePath)
+{
+    const FilePath executablePath = FilePath::fromString(_executablePath);
+    const QDateTime timeStamp = executablePath.lastModified();
+    const auto it = cache.find(executablePath);
+    if (it == cache.end()) {
+        const ClazyStandaloneInfo info(executablePath.toString());
+        cache.insert(executablePath, qMakePair(timeStamp, info));
+        return info;
+    }
+    if (it->first != timeStamp) {
+        it->first = timeStamp;
+        it->second = ClazyStandaloneInfo(executablePath.toString());
+    }
+    return it->second;
+}
+
 ClazyStandaloneInfo::ClazyStandaloneInfo(const QString &executablePath)
     : defaultChecks(queryClangTidyChecks(executablePath, {})) // Yup, behaves as clang-tidy.
     , supportedChecks(querySupportedClazyChecks(executablePath))
@@ -228,6 +245,8 @@ QPair<FilePath, QString> getClangIncludeDirAndVersion(const FilePath &clangToolP
         return qMakePair(FilePath::fromString(CLANG_INCLUDE_DIR), QString(CLANG_VERSION));
     return qMakePair(dynamicResourceDir + "/include", dynamicVersion);
 }
+
+QHash<Utils::FilePath, QPair<QDateTime, ClazyStandaloneInfo>> ClazyStandaloneInfo::cache;
 
 } // namespace Internal
 } // namespace ClangTools
