src/plugins/clangtools/runsettingswidget.cpp
@@ -80,7 +80,7 @@ static CppTools::ClangDiagnosticConfigsWidget *createEditWidget(
     return new DiagnosticConfigsWidget(configs,
                                        configToSelect,
                                        ClangTidyInfo(clangTidyPath),
-                                       ClazyStandaloneInfo(clazyStandalonePath));
+                                       ClazyStandaloneInfo::getInfo(clazyStandalonePath));
 }
 
 void RunSettingsWidget::fromSettings(const RunSettings &s)
